syntax corrections