@@ -10,11 +10,11 @@ public class ExtentTestManager {
     static Map<Integer, ExtentTest> extentTestMap = new HashMap<>();
     static ExtentReports extent = ExtentManager.createInstance();
     public static synchronized ExtentTest getTest() {
-        return extentTestMap.get((int) Thread.currentThread().threadId());
+        return extentTestMap.get((int) Thread.currentThread().getId());
     }
     public static synchronized ExtentTest startTest(String testName, String desc) {
         ExtentTest test = extent.createTest(testName, desc);
-        extentTestMap.put((int) Thread.currentThread().threadId(), test);
+        extentTestMap.put((int) Thread.currentThread().getId(), test);
         return test;
     }
 }
